made buttons and fixed 1 background

--- a/some_personal_info.html
+++ b/some_personal_info.html
@@ -7,7 +7,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
-	<body>
+	<body id="background_1">
 	<h2> some personal info </h2>
 		<ul style="list-style-type: none;">
 			<li> fisrt name: Rens </li>
