--- a/wie_ben_ik.html
+++ b/wie_ben_ik.html
@@ -13,15 +13,15 @@
 
 		<div class="grid">
 
-		<div class="box info"> <h3> <a href="some_personal_info.html"> personal info </a> </h3> </div>
+		<div class="box info button"> <h3> <a href="some_personal_info.html"> personal info </a> </h3> </div>
 
-		<div class="box me"> <h3> <a href="who_am_I.html"> who am I </a> </h3> </div>
+		<div class="box me button"> <h3> <a href="who_am_I.html"> who am I </a> </h3> </div>
 
-		<div class="box skills"> <h3> <a href="knowledge_and_skills.html"> knowledge and skills </a> </h3> </div>
+		<div class="box skills button"> <h3> <a href="knowledge_and_skills.html"> knowledge and skills </a> </h3> </div>
 
-		<div class="box education"> <h3> <a href="my_education.html"> my education </a> </h3> </div>
+		<div class="box education button"> <h3> <a href="my_education.html"> my education </a> </h3> </div>
 
-		<div class="box work"> <h3> <a href="work_experience.html"> work experience </a> </h3> </div>	
+		<div class="box work button"> <h3> <a href="work_experience.html"> work experience </a> </h3> </div>	
 
 		</div>
 
