--- a/work_experience.html
+++ b/work_experience.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 	<h2> work experience </h2>
-		<p> i worked a bit as a construction fitter for about 1 year but it was not quite what i thought it was so i went back to school and started going for programing </p>
+		<p> i worked a bit as a construction fitter for about 1 year but it was not quite what i thought it was so i went back to school and started going for programming </p>
 
 		<h3> <a href="wie_ben_ik.html"> home page </a> </h3>
 
