background fully fixed (knowledge and skills) now has text (who am I) now has text fixed all buttons

--- a/knowledge_and_skills.html
+++ b/knowledge_and_skills.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title> knowledge and skills </title>
+		<title> Knowledge and skills </title>
 		<link rel="stylesheet" type="text/css" href="css.css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-	<body>
+	<body class="shit">
 	<!--
 		een algemen omschrijving van jou als persoon. Wat zijn je doelen? Wat doe je graag?
 		-->
-		<h2> knowledge and skills </h2>
-
-
+		<h2> Knowledge and skills </h2>
 
 		<ul>
-			<li> everything in this world :P </li>
+			<li> A bit of HTML and CSS </li>
+			<li> Construction fitting and welding(mig+mag) </li>
+			<li>  </li>
 		</ul>
 		
-		<h3> <a href="wie_ben_ik.html"> home page </a> </h3>
+		<h3> <a href="wie_ben_ik.html"> <button> Home page </button> </a> </h3>
 
 	</body>
 </html>
