--- a/my_education.html
+++ b/my_education.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title> my education </title>
+		<title> My education </title>
 		<link rel="stylesheet" type="text/css" href="css.css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-	<body>
-		<h2> my education </h2>
+	<body class="shit">
+		<h2> My education </h2>
 		<p> All the schools i went to and educations i did </p>
 		<ol type="I">
-			<li> elementary School: Annefrank school dordrecht </li>
-			<li> (VMBO-KB)preparatory secondary vocational education: Welland college Dordrecht </li>
+			<li> elementary School: Annefrank school Dordrecht </li>
+			<li> (VMBO-KB)preparatory secondary vocational education: Welland College Dordrecht </li>
 			<li> (MBO 2)intermediate vocational education: construction fitter + mig/mag welding </li>
+			<li> Basic VCA </li>
 			<li> (MBO 3)intermediate vocational education: employee management ICT </li>
 			<li> (MBO 4)intermediate vocational education: application development </li>
 		</ol>
 		<p> And im currently doing the application development study </p>
 
-		<h3> <a href="wie_ben_ik.html"> home page </a> </h3>
+		<h3> <a href="wie_ben_ik.html"> <button> Home page </button> </a> </h3>
 
 	</body>
 </html>
