--- a/some_personal_info.html
+++ b/some_personal_info.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title> some personal info </title>
+		<title> Some personal info </title>
 		<link rel="stylesheet" type="text/css" href="css.css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
 
-	<body id="background_1">
-	<h2> some personal info </h2>
+	<body class="shit">
+	<h2> Some personal info </h2>
 		<ul style="list-style-type: none;">
 			<li> fisrt name: Rens </li>
 			<li> last name: Gouman </li>
@@ -17,7 +17,7 @@
 			<li> E-mail: rens@gouman.eu </li>
 		</ul>
 
-		<h3> <a href="wie_ben_ik.html"> home page </a> </h3>
+		<h3> <a href="wie_ben_ik.html"> <button> Home page </button> </a> </h3>
 
 	</body>
 </html>
