--- a/who_am_I.html
+++ b/who_am_I.html
@@ -9,11 +9,12 @@
 	<body>
 		<h2> Who am I? </h2>
 
-		<p>  </p>
+		<p> I dont know how to describe myself </p>
+	
+		<p> Below the results of my personality test </p>
+		<img src="my_personality.PNG" alt="the result of my personality test" style="width: 1200px; height: 700px;">
 
-		<img src="my_personality.PNG" style="">
-
-		<h3> <a href="wie_ben_ik.html"> home page </a> </h3>
+		<h3> <a href="wie_ben_ik.html"> <button> Home page </button> </a> </h3>
 
 	</body>
 </html>
