--- a/wie_ben_ik.html
+++ b/wie_ben_ik.html
@@ -6,22 +6,22 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-	<body>
-	<h1> Who am i? </h1>
+	<body class="shit">
+	<h1> Who am I? </h1>
 
-		<h3> content </h3>
+		<h3> Content </h3>
 
 		<div class="grid">
 
-		<div class="box info button"> <h3> <a href="some_personal_info.html"> personal info </a> </h3> </div>
+		<div class="box info button"> <h3> <a href="some_personal_info.html"> <button> Personal info </button> </a> </h3> </div>
 
-		<div class="box me button"> <h3> <a href="who_am_I.html"> who am I </a> </h3> </div>
+		<div class="box me button"> <h3> <a href="who_am_I.html"> <button> Who am I </button> </a> </h3> </div>
 
-		<div class="box skills button"> <h3> <a href="knowledge_and_skills.html"> knowledge and skills </a> </h3> </div>
+		<div class="box skills button"> <h3> <a href="knowledge_and_skills.html"> <button> Knowledge and skills </button> </a> </h3> </div>
 
-		<div class="box education button"> <h3> <a href="my_education.html"> my education </a> </h3> </div>
+		<div class="box education button"> <h3> <a href="my_education.html"> <button> My education </button> </a> </h3> </div>
 
-		<div class="box work button"> <h3> <a href="work_experience.html"> work experience </a> </h3> </div>	
+		<div class="box work button"> <h3> <a href="work_experience.html"> <button> Work experience </button> </a> </h3> </div>	
 
 		</div>
 
