--- a/work_experience.html
+++ b/work_experience.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title> work experience </title>
+		<title> Work experience </title>
 		<link rel="stylesheet" type="text/css" href="css.css">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	</head>
-	<body>
-	<h2> work experience </h2>
+	<body class="shit">
+	<h2> Work experience </h2>
 		<p> i worked a bit as a construction fitter for about 1 year but it was not quite what i thought it was so i went back to school and started going for programming </p>
 
-		<h3> <a href="wie_ben_ik.html"> home page </a> </h3>
+		<h3> <a href="wie_ben_ik.html"> <button> Home page </button> </a> </h3>
 
 	</body>
 </html>
