deleted some stuff i did not need anymore

--- a/wie_ben_ik.html
+++ b/wie_ben_ik.html
@@ -13,15 +13,15 @@
 
 		<div class="grid">
 
-		<div class="box info button"> <h3> <a href="some_personal_info.html"> <button> Personal info </button> </a> </h3> </div>
+		<div class="info"> <h3> <a href="some_personal_info.html"> <button> Personal info </button> </a> </h3> </div>
 
-		<div class="box me button"> <h3> <a href="who_am_I.html"> <button> Who am I </button> </a> </h3> </div>
+		<div class="me"> <h3> <a href="who_am_I.html"> <button> Who am I </button> </a> </h3> </div>
 
-		<div class="box skills button"> <h3> <a href="knowledge_and_skills.html"> <button> Knowledge and skills </button> </a> </h3> </div>
+		<div class="skills"> <h3> <a href="knowledge_and_skills.html"> <button> Knowledge and skills </button> </a> </h3> </div>
 
-		<div class="box education button"> <h3> <a href="my_education.html"> <button> My education </button> </a> </h3> </div>
+		<div class="education"> <h3> <a href="my_education.html"> <button> My education </button> </a> </h3> </div>
 
-		<div class="box work button"> <h3> <a href="work_experience.html"> <button> Work experience </button> </a> </h3> </div>	
+		<div class="work"> <h3> <a href="work_experience.html"> <button> Work experience </button> </a> </h3> </div>	
 
 		</div>
 
