changed fisrt to first

--- a/some_personal_info.html
+++ b/some_personal_info.html
@@ -10,7 +10,7 @@
 	<body class="shit">
 	<h2> Some personal info </h2>
 		<ul style="list-style-type: none;">
-			<li> fisrt name: Rens </li>
+			<li> first name: Rens </li>
 			<li> last name: Gouman </li>
 			<li> birthday(DD-MM-YYYY): 02-05-1995 </li>
 			<li> place of residence: the Netherlands->South Holland->Dordrecht->S.M Hugo van Gijnweg 27 </li>
