update to work with the layout opdracht

--- a/wie_ben_ik.html
+++ b/wie_ben_ik.html
@@ -23,6 +23,8 @@
 
 		<a class="work" href="work_experience.html"> <button> Work experience </button> </a>
 
+		<a class="games_and_anime" href="../layout/homepage.html"> <button> games and anime </button> </a>
+
 		</div>
 
 	</body>
